Add pop-up on movie record click

--- a/clapdash_app/templates/_cards.html
+++ b/clapdash_app/templates/_cards.html
@@ -1,11 +1,10 @@
-
-<div class="card-deck">
 {% for watched_in_month in movies|groupby('month_watched') %}
+<div>
 <h1>{{ watched_in_month.grouper }}</h1>
 <div class="card-deck">
 {% for movie in watched_in_month.list %}
-    <div class="card mb-4">
-        <img class="card-img-top" src={{ "https://image.tmdb.org/t/p/w500" ~ movie.Poster }} alt="Card image cap">
+    <div id={{ movie.name|replace(' ', '_') }} class="card mb-4">
+        <img class="card-img-top" src={{ "https://image.tmdb.org/t/p/w500" ~ movie.Poster }} alt="No Poster">
         <div class="card-body">
             <h5 class="card-title">{{ movie.Title }}</h5>
         </div>
