--- a/clapdash_app/templates/_movie_modal.html
+++ b/clapdash_app/templates/_movie_modal.html
@@ -1,8 +1,8 @@
-<div class="modal fade" id={{ "modal-" ~ movie.name|replace(' ', '_') }} tabindex="-1" role="dialog" aria-labelledby={{ "title-" ~ movie.name|replace(' ', '_') }} aria-hidden="true">
+<div class="modal fade" id="{{ 'modal-' ~ movie.name|e|replace(' ', '_') }}" tabindex="-1" role="dialog" aria-labelledby="{{ 'title-' ~ movie.name|e }}" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id={{ "title-" ~ movie.name|replace(' ', '_') }}>{{ movie.Title }}</h5>
+              <h5 class="modal-title" id="{{ 'title-' ~ movie.name|e }}">{{ movie.Title }}</h5>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
@@ -14,7 +14,11 @@
                                 <img class="card-img-top" src={{ "https://image.tmdb.org/t/p/w500" ~ movie.Poster }} alt="Card image cap">
                             </div>
                             <div class="col-sm">
-                                <p>{{ movie['Release Date'] }}</p>
+                                <p><strong>Release Date:</strong><br>{{ movie['Release Date'] }}</p>
+                                <p><strong>Runtime: </strong><br>{{ movie['Runtime']|int }} min.</p>
+                                <p><strong>Production Country: </strong><br>{{ movie['Production Country'] }}</p>
+                                <p><strong>Spoken Language: </strong><br>{{ movie['Original Language'] }}</p>
+                                <p><strong>TMDB Score: </strong><br>{{ movie['TMDB Score'] }}</p>
                             </div>
                         </div>
                 </div>
