--- a/clapdash_app/templates/home.html
+++ b/clapdash_app/templates/home.html
@@ -8,7 +8,6 @@ Home
     <div id="card-container">
 
     </div>
-    <i class="fas fa-chevron-down" id="next-page"></i>
 </div>
 
 {% include '_options_modal.html' %}
@@ -18,6 +17,7 @@ Home
 <script type="text/javascript">
     url = ""
     var googAuth;
+    disableScroll = true;
     movieQueue = []
     cols = []
     page = 1
@@ -84,10 +84,18 @@ Home
         $('#options').modal('hide')
     });
 
-    $('#next-page').click(function(){
-        movies = fetchNextPage()
+    $(window).on('scroll', function() {
+        if (disableScroll == false){
+            fetchAtBottom();
+        }
+    });
 
-    })
+    function fetchAtBottom(){
+        if($(window).scrollTop() + $(window).height() > $(document).height() - 100) {
+            disableScroll = true;
+            movies = fetchNextPage()
+        }
+    }
 
     function fetchNextPage() 
     {
@@ -114,7 +122,7 @@ Home
                 .always(function(){
                     searchCounter--
                     if (searchCounter == 0){
-                        setTimeout($('#next-page').on('click', fetchNextPage), 10000)
+                        setTimeout(function(){disableScroll = false}, 10000)
                         $.post('/movies/', {data: JSON.stringify(movieQueue)}, function(){
                             $.get('/movies/render', { page: page }, function(cards){
                                 $('#card-container').append(cards)
