Add loader icon

--- a/clapdash_app/templates/_options_modal.html
+++ b/clapdash_app/templates/_options_modal.html
@@ -10,7 +10,7 @@
                 <div style="display: none" id="url-selector">
                     <hr>
                     <h6>Select Spreadsheet URL</h6>
-                    <div class="input-group mb-3">
+                    <div class="input-group mb-3" id="url-form">
                         <input type="text" class="form-control" placeholder="Google Sheets URL" aria-label="Google Sheets URL" aria-describedby="url-button" id="url-input">
                         <div class="input-group-append">
                             <button class="btn btn-outline-secondary" type="button" id="url-button">Send</button>
