--- a/clapdash_app/templates/layout.html
+++ b/clapdash_app/templates/layout.html
@@ -24,7 +24,11 @@
             {% endblock %}
             <hr/>
             <footer>
-                <p>&copy; 2018</p>
+                <div class='flex-container'>
+                  <p>
+                    &copy; Nick Tabler // 2019
+                    <img style="max-width:3vw; margin-right:3vw; margin-bottom:1vh;" src="https://www.themoviedb.org/assets/2/v4/logos/stacked-green-cae7a95e2590dbdde28284ac26245cb2792788838f5c498b892e8d01c183e6f3.svg" align="right">
+                  </p>
             </footer>
         </div>
 
